src/test/ui/type-alias-impl-trait/generic_underconstrained.stderr
error: at least one trait must be specified
  --> $DIR/generic_underconstrained.rs:6:35
   |
LL | type Underconstrained<T: Trait> = impl 'static;
   |                                   ^^^^^^^^^^^^

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/generic_underconstrained.rs:10:31
   |
LL | type Underconstrained<T: Trait> = impl 'static;
   |                          ----- required by this bound in `Underconstrained`
...
LL | fn underconstrain<T>(_: T) -> Underconstrained<T> {
   |                               ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | fn underconstrain<T: Trait>(_: T) -> Underconstrained<T> {
   |                    ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
